retrieved/unpackaged/objects/Weapon__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Electric_Damage__c</fullName>
        <label>Electric Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Damage__c</fullName>
        <label>Fire Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Damage__c</fullName>
        <label>Physical Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Poison_Damage__c</fullName>
        <label>Poison Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Handed</fullName>
                    <default>true</default>
                    <label>One-Handed</label>
                </value>
                <value>
                    <fullName>Two-Handed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Damage__c</fullName>
        <label>Water Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weapon_Image__c</fullName>
        <formula>Image( Picture__c, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weapon Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Weapon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weapon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weapons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>